--- a/src/app/forms/registro/registro.page.html
+++ b/src/app/forms/registro/registro.page.html
@@ -5,5 +5,28 @@
 </ion-header>
 
 <ion-content>
+  <form [formGroup]="grupo">
+    <ion-item>
+      <ion-label position="stacked">Nome do Produto:</ion-label>
+       <ion-input formControlName="nomeProduto"></ion-input>
+       </ion-item>
+
+       <ion-item>
+          <ion-label position="stacked">Quantidade:</ion-label>
+           <ion-input formControlName="quantidade"></ion-input>
+           </ion-item>
+            <ion-item>
+              <ion-label position="stacked">Preço:</ion-label>
+              <ion-input formControlName="preco"></ion-input>
+            </ion-item>
+             <ion-item>
+               <ion-label position="stacked">ID do Produto:</ion-label>
+                <ion-input formControlName="id"></ion-input>
+              </ion-item>
+              <ion-button expand="block" color="success" (click)="salvar()">Salvar</ion-button>
+    </form>
+    </ion-content>
+
+
 
 </ion-content>
