--- a/src/app/forms/login/login.page.html
+++ b/src/app/forms/login/login.page.html
@@ -21,8 +21,8 @@
   <ion-note slot="error">Senha inválida</ion-note>
 </ion-item>
 
-<ion-button class="aa" color="new">Registrar</ion-button>
-<ion-button shape="round" class="ac" color="new" routerLink="tab1" >Entrar</ion-button>
+<ion-button routerLink="/registro" class="aa" color="new" >Registrar</ion-button>
+<ion-button routerLink="/tabs/tab1" shape="round" class="ac" color="new"  >Entrar</ion-button>
 <ion-button fill="clear" class="ab" color="new" >Esqueci minha senha</ion-button>
 
 
