--- a/src/app/forms/registro/registro.page.html
+++ b/src/app/forms/registro/registro.page.html
@@ -9,6 +9,8 @@
     <ion-item>
       <ion-label position="stacked">Nome:</ion-label>
       <ion-input formControlName="nome"></ion-input>
+
+    </span>
     </ion-item>
 
     <ion-item>
