--- a/src/app/produtos/produtos.page.html
+++ b/src/app/produtos/produtos.page.html
@@ -1,12 +1,10 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Produtos
-    </ion-title>
+    <ion-title>produtos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-item>
     <ion-label position="stacked">Nome:</ion-label>
     <ion-input></ion-input>
@@ -23,6 +21,5 @@
   <ion-label position="stacked">Preco:</ion-label>
     <ion-input ></ion-input>
   </ion-item>
-
 
 </ion-content>
