--- a/src/app/forms/registro/registro.page.html
+++ b/src/app/forms/registro/registro.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="v">
     <ion-title>registro</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -10,7 +10,6 @@
       <ion-label position="stacked">Nome:</ion-label>
       <ion-input formControlName="nome"></ion-input>
 
-    </span>
     </ion-item>
 
     <ion-item>
@@ -29,7 +28,7 @@
       <ion-label position="stacked">Confirma Senha:</ion-label>
       <ion-input type="password" formControlName="confirmaSenha"></ion-input>
     </ion-item>
-    <ion-button expand="block" color="success" (click)="salvarRegistro()">SALVAR</ion-button>
+    <ion-button expand="block" color="v" (click)="salvarRegistro()">SALVAR</ion-button>
 
   </form>
 </ion-content>
